--- a/app/templates/interview.html
+++ b/app/templates/interview.html
@@ -4,12 +4,12 @@
 {%block content%}
 
 <div class="jumbotron text-center" style="background-color: rgb(5, 122, 158); color: #fff; padding: 100px 25px">
-    <h1>Interview Pitches</h1>
+    <h1>Interview Blogs</h1>
 </div>
 <div class="container">
     <hr>
     <div class="row">
-        {{macro.displayPitches(pitches)}}
+        {{macro.displayBlogs(blogs)}}
         
     </div>
 </div>
