--- a/app/templates/pickup.html
+++ b/app/templates/pickup.html
@@ -8,7 +8,7 @@
 <div class="container">
     <hr>
     <div class="row">
-        {{macro.displayPitches(pitches)}}
+        {{macro.displayBlogs(blogs)}}
     </div>
 </div>
 {%endblock%}
