--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -19,14 +19,14 @@
         </div>
         <div class="col-md-9">
             <p>Name: {{user.firstname}} {{user.lastname}} </p>
-            <p>No of piches: {{pitches_count}}</p>
+            <p>No of blogs: {{blogs_count}}</p>
             <p>Date joined: {{date}}</p>
         </div>
         <div class="row">
             <div class="col-md-12">
-              <h3> Pitches </h3>
+              <h3> Blogs </h3>
               <hr>
-               {{macro.displayPitches(pitches)}}
+               {{macro.displayBlogs(blogs)}}
             </div>
         </div>
     </div>
