--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,11 +1,11 @@
-{% macro displayPitches(pitches_list)%}
-    {%for pitch in pitches_list%}
+{% macro displayBlogs(blogs_list)%}
+    {%for blog in blogs_list%}
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 review-card">
             <div class="well well-lg">
-                <h4>{{pitch.pitch_title}}</h4>
-                <p>{{pitch.pitch_content| truncate(100)}}</p>
+                <h4>{{blog.blog_title}}</h4>
+                <p>{{blog.blog_content| truncate(100)}}</p>
                 
-                <button type="button" class="btn btn-primary"><a href="{{url_for('main.form', id= pitch.id)}}" style="color:white; font-weight:bolder;">Comment</a></button>
+                <button type="button" class="btn btn-primary"><a href="{{url_for('main.form', id= blog.id)}}" style="color:white; font-weight:bolder;">Comment</a></button>
             </div>
         </div>
     {%endfor%}
