--- a/app/templates/promotion.html
+++ b/app/templates/promotion.html
@@ -3,12 +3,12 @@
 
 {%block content%}
 <div class="jumbotron text-center" style="background-color: rgb(5, 122, 158); color: #fff; padding: 100px 25px">
-    <h1>Promotion Pitches</h1>
+    <h1>Promotion Blogs</h1>
 </div>
 <div class="container">
     <hr>
     <div class="row">
-        {{macro.displayPitches(pitches)}}
+        {{macro.displayBlogs(blogs)}}
     </div>
 </div>
 {%endblock%}
