--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,31 +11,10 @@
         <div class="row" style="text-align:center; font-size:30px;">
             <span style="font-size:40px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Online Blog Application</span>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3"> 
-                    <a href="{{url_for('main.interview')}}" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:20px;">
-                        <br>
-                        Inteview Blogs
-                    </a>
-                    <br>
-                    <a href="{{url_for('main.pickup')}}" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:20px;">
-                        <br>
-                        Pick Up Lines
-                    </a>
-                    <br>
-                    <a href="{{url_for('main.promotion')}}" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:20px;">
-                        <br>
-                        Promotion Blogs
-                    </a>
-                    <br>
-                    <a href="{{url_for('main.product')}}" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:20px;">
-                        <br>
-                        Product Blogs
-                    </a>
-                    <br>
-        </div>
+        
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
             <div class="panel style="style="border: 3px solid #f2f2f2; padding:20px; margin-top:10px;">
-                <p style="font-family: Arial, Helvetica, sans-serif; font-size:20px;">Write your blog in any of the categories to the left and let other user vote and comment on it. </p>
+                <p style="font-family: Arial, Helvetica, sans-serif; font-size:20px;">Write your blog  and let other users comment on it. </p>
                 
                 <div style="text-align:center; font-size:20px;">
                     <a href="{{url_for('main.new_blog')}}">
@@ -44,20 +23,44 @@
                     </a>
 
                 </div>
-            
+               
             </div>
-            
+            <div class="container">
+                {%for blog in inkoko%}
+             <table>
+                 <tr>
+                     <td>{{blog.blog_title}}</td> <br>
+                     
+                     <td>{{blog. blog_content}} <button type="button" class="btn btn-info"><a href="{{url_for('main.form')}}">comment</a></button></td> 
+                 </tr>
+                 <tr>
+                    {%for utwana in imishwi%}
+                     <td>{{utwana.comment}}</td> <br>
+                     {%endfor%} 
+                 </tr>
+             </table>
+
+                {%endfor%}
+            </div>
+            {%for utwana in imishwi%}
+                     <td>{{utwana.comment}}</td> <br>
+                     {%endfor%}
+           
         </div>
     </hr>
         <div class="all-pitches">
             <span style="color:brown;"></span>
                 <hr> 
-                {{macro.displayBlogs(blogs)}}
-            
+                {{macro.displayBlogs(blogs)}}<br>
+
+                
+               
 
         </div>
+       
 
     </div>
+    
 
 
 {% endblock %}
