add a README.md

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -7,12 +7,12 @@
     <div class="row">
         <!-- <h3>{{pitch.pitch_title}}</h3> -->
         <hr>
-        <p>{{pitch.blog_content}}</p>
+        <p>{{blog.blog_content}}</p>
         <span>
         <p>Posted on {{date}} by {{blog.user.username| capitalize}}</p>
         <a href="/pitch/{{blog.id}}?like=1">
             <i class="far fa-thumbs-up"></i>
-        </a>{{pitch.likes}} <a href="/blog/{{blog.id}}?dislike=1">
+        </a>{{blog.likes}} <a href="/blog/{{blog.id}}?dislike=1">
             <i class="far fa-thumbs-down"></i>
         </a>{{blog.dislikes}}</span>
 
