add the new file for the viewcomment.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,8 +25,8 @@
                 </div>
                
             </div>
-            <div class="container">
-                {%for blog in inkoko%}
+            <!-- <div class="container">
+                {%for blog in blogs%}
              <table>
                  <tr>
                      <td>{{blog.blog_title}}</td> <br>
@@ -42,7 +42,7 @@
              </table>
 
                 {%endfor%}
-            </div>
+            </div> -->
         
         </div>
     </hr>
