--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -5,12 +5,12 @@
 {%block content%}
 <div class="container" style="font-family: 'Indie Flower', cursive;">
     <div class="row">
-        <!-- <h3>{{pitch.pitch_title}}</h3> -->
+        
         <hr>
         <p>{{blog.blog_content}}</p>
         <span>
         <p>Posted on {{date}} by {{blog.user.username| capitalize}}</p>
-        <a href="/pitch/{{blog.id}}?like=1">
+        <a href="/blog/{{blog.id}}?like=1">
             <i class="far fa-thumbs-up"></i>
         </a>{{blog.likes}} <a href="/blog/{{blog.id}}?dislike=1">
             <i class="far fa-thumbs-down"></i>
