--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -5,8 +5,12 @@
                 <h4>{{blog.blog_title}}</h4>
                 <p>{{blog.blog_content| truncate(100)}}</p>
                 
-                <button type="button" class="btn btn-primary"><a href="{{url_for('main.form', id= blog.id)}}" style="color:white; font-weight:bolder;">Comment</a></button>
+                <button type="button" class="btn btn-primary"><a href="{{url_for('main.form', id= blog.id)}}" style="color:white; font-weight:bolder;">Comment</a>
+                </button>
+                <a href="/delete_blog/{{blog.id}}" class="btn btn-primary pull-right" style="margin-bottom:60px;">Delete Blog</a>
+                
             </div>
+            <a href="/viewcomment/{{blog.id}}" class="btn btn-primary pull-right" style="margin-bottom:60px;">View Comment</a>
         </div>
     {%endfor%}
 {%endmacro%}
@@ -14,7 +18,7 @@
 {%macro displayComments(comments_list)%}
     {%for comment in comments_list%}
         <div class="col-md-6">
-           
+            <h5>{{comment.user.username}}</h5>
             <p>{{comment.comment}}</p>
         </div>
     {%endfor%}
